<resources>
    <string name="app_name">Praca Inzynierska</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="tutorial">Jak Grać</string>
    <string name="game">Graj</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="close">Zamknij</string>
    <string name="accept">AKCEPTUJ</string>
    <string name="title_activity_tutorial2">TutorialActivity2</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="register">Zarejestruj się</string>
    <string name="reset_password">Zapomniałem hasła</string>
    <string name="forget_password">Zapomniałem hasła</string>
    <string name="password">Hasło</string>
    <string name="email">E-mail</string>
    <string name="login">Zaloguj</string>
    <string name="logout">WYLOGUJ</string>
    <string name="game_name">HexBattle</string>
    <string name="nick">Nazwa Gracza</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="createRoom">Stwórz pokój</string>
    <string name="lobby">LOBBY POKOI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_main3">MainActivity3</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="goToMenu">Przejdź do menu</string>
    <string name="checkInGame">Sprawdź w praktyce</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>